<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Хочу помочь</string>
    <string name="logo_of_app">Name of app</string>
    <string name="logo_of_company">logo of company</string>
    <string name="loading_text">Загрузка…</string>
    <string name="bottom_news">Новости</string>
    <string name="bottom_search">Поиск</string>
    <string name="bottom_help">Помочь</string>
    <string name="bottom_history">История</string>
    <string name="bottom_profile">Профиль</string>
    <string name="profile_image">profile image</string>
    <string name="user_name">Константинов Денис</string>
    <string name="profile_activity_name">Профиль</string>
    <string name="label_date_birth">Дата рождения</string>
    <string name="date">01 февраля 1980</string>
    <string name="label_sphere">Сфера деятельности</string>
    <string name="sphere">Хирургия, травмотология</string>
    <string name="push">Получать push-уведомления</string>
    <string name="label_friends">Ваши друзья</string>
    <string name="avatar1" tools:ignore="Typos">avatar1</string>
    <string name="avatar2">avatar2</string>
    <string name="avatar3">avatar3</string>
    <string name="name_avatar1">Дмитрий Валерьевич</string>
    <string name="name_avatar2">Евгений Александров</string>
    <string name="name_avatar3">Виктор Кузнецов</string>
    <string name="button_logout">Выйти из аккаунта</string>
    <string name="pencil">pencil</string>
    <string name="help">Помочь</string>
    <string name="edit">Редактировать</string>
    <string name="change_photo">Сменить \n Фото</string>
    <string name="label_family">Ваша фамилия</string>
    <string name="enter_family">Введите фамилию</string>
    <string name="your_name">Ваше имя</string>
    <string name="large_text_sphere">Заполните вашу сферу деятельности, чтобы быть наиболее полезным</string>
    <string name="your_sphere">Сфера деятельности</string>
    <string name="password">Пароль</string>
    <string name="label_e_mail">E-mail для уведомления</string>
    <string name="e_mail">E-mail</string>
    <string name="by_events">По мероприятиям</string>
    <string name="on_NKO">По НКО</string>
    <string name="help_category">Выберите категорию помощи</string>
    <string name="lange_text_search">Напишите в строке поиска название \n мероприятия или ключевые слова.</string>
    <string name="large_text_success_search">Ключевые слова: мастер-класс, помощь \nРезультаты поиска: 109 мероприятий</string>
    <string-array name="values">
        <item>"Выбрать фото"</item>
        <item>"Сделать снимок"</item>
        <item>"Удалить"</item>
    </string-array>
    <string name="children">Дети</string>
    <string name="adult">Взрослые</string>
    <string name="old">Пожилые</string>
    <string name="animals">Животные</string>
    <string name="events">Мероприятия</string>
    <string name="enter_name_organization">Введите название организации</string>
    <string name="test_password">1234567</string>
    <string name="January">январь</string>
    <string name="February">февраль</string>
    <string name="March">март</string>
    <string name="April">апрель</string>
    <string name="May">май</string>
    <string name="June">июнь</string>
    <string name="July">июль</string>
    <string name="August">август</string>
    <string name="September">сентябрь</string>
    <string name="October">октябрь</string>
    <string name="November">ноябрь</string>
    <string name="December">декабрь</string>
    <string name="any_questions">У вас есть вопросы?</string>
    <string name="_102">+102</string>
    <string name="filter">Фильтр</string>
    <string name="money">Деньгами</string>
    <string name="clothes">Вещами</string>
    <string name="pro_help">Проф помощью</string>
    <string name="volunteer">Волонтерством</string>
    <string name="news">Новости</string>
    <string name="path_to_categories">categories.json</string>
    <string name="path_to_news">news.json</string>
    <string name="login">Авторизация</string>
    <string name="button_login">Войти</string>
    <string name="string_with_social">Для участия в мероприятиях войдите в приложение через социальые сети</string>
    <string name="string_with_app">Или авторизуйтесь через приложение</string>
    <string name="title_activity_compose_login">ComposeLoginActivity</string>
    <string name="title_activity_news_compose">NewsComposeActivity</string>
    <string name="title_activity_event_compose">EventComposeActivity</string>
    <string name="title_activity_filter_compose">FilterComposeActivity</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="registration">Регистрация</string>
</resources>