<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/news"
        android:title="@string/bottom_news"
        android:icon="@drawable/icon_news"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/search"
        android:title="@string/bottom_search"
        android:icon="@drawable/icon_search"
        />
    <item
        android:id="@+id/heart"
        android:title="@string/bottom_help"
        android:icon="@drawable/icon_heart"
        />

    <item
        android:id="@+id/history"
        android:title="@string/bottom_history"
        android:icon="@drawable/icon_history"
        />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/icon_profile"
        android:title="@string/bottom_profile" />
</menu>